# basilica_miner

./: .gitignore  Cargo.toml  README.md  justfile
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-adhoc.yml  release.yml
config/: README.md  api.correct.toml  api.toml.example  cli.toml.example  miner.prod.toml  miner.toml.example  validator-testnet.toml  validator.correct.toml  validator.prod.toml  validator.toml.example
crates/basilica-api/: Cargo.toml  README.md
crates/basilica-api/migrations/: 001_user_rentals.sql
crates/basilica-api/src/: client.rs  error.rs  lib.rs  main.rs  server.rs
crates/basilica-api/src/api/: mod.rs  types.rs
crates/basilica-api/src/api/auth/: jwt_validator.rs  mod.rs
crates/basilica-api/src/api/extractors/: mod.rs  ownership.rs
crates/basilica-api/src/api/middleware/: auth0.rs  mod.rs  scope.rs
crates/basilica-api/src/api/routes/: health.rs  mod.rs  rentals.rs
crates/basilica-api/src/config/: cache.rs  mod.rs  server.rs
crates/basilica-api/tests/: auth0_test.rs
crates/basilica-cli/: Cargo.toml
crates/basilica-cli/src/: client.rs  error.rs  lib.rs  main.rs
crates/basilica-cli/src/auth/: callback_server.rs  device_flow.rs  mod.rs  oauth_flow.rs  token_store.rs  types.rs
crates/basilica-cli/src/cache/: mod.rs
crates/basilica-cli/src/cli/: args.rs  commands.rs  mod.rs
crates/basilica-cli/src/cli/handlers/: auth.rs  config.rs  external.rs  gpu_rental.rs  mod.rs  test_auth.rs  wallet.rs
crates/basilica-cli/src/config/: mod.rs
crates/basilica-cli/src/interactive/: mod.rs  selector.rs
crates/basilica-cli/src/output/: mod.rs  table_output.rs
crates/basilica-cli/src/progress/: mod.rs
crates/basilica-cli/src/ssh/: mod.rs
crates/basilica-cli/src/wallet/: mod.rs
crates/basilica-common/: Cargo.toml  build.rs
crates/basilica-common/src/: auth_constants.rs  lib.rs
crates/basilica-common/tests/: crypto_integration.rs  executor_identity_integration.rs
crates/basilica-executor/: Cargo.toml
crates/basilica-executor/src/: lib.rs  main.rs  miner_auth.rs
crates/basilica-executor/tests/: config_tests.rs  (+4 more)
crates/basilica-miner/: Cargo.toml
crates/basilica-protocol/: Cargo.toml  build.rs
crates/basilica-protocol/proto/: common.proto  executor_control.proto  miner_discovery.proto  rental.proto
crates/basilica-protocol/src/: lib.rs
crates/basilica-validator/: Cargo.toml
crates/basilica-validator/migrations/: 20241208_003_remove_primary_gpu_model.sql
crates/basilica-validator/src/: lib.rs  main.rs
crates/basilica-validator/src/api/: client.rs  mod.rs  rental_routes.rs  types.rs
crates/basilica-validator/src/api/routes/: capacity.rs  config.rs  gpu.rs  miners.rs  mod.rs  verification.rs
crates/basilica-validator/src/bittensor_core/: chain_registration.rs  weight_allocation.rs  weight_setter.rs
crates/basilica-validator/src/cli/: args.rs  commands.rs  mod.rs
crates/basilica-validator/src/cli/handlers/: database.rs  mod.rs  rental.rs  service.rs
crates/basilica-validator/src/collateral/: collateral_scan.rs  mod.rs
crates/basilica-validator/src/config/: emission.rs  emission_tests.rs  integration_tests.rs  main_config.rs
crates/basilica-validator/src/gpu/: categorization.rs  categorization_tests.rs  epoch_filtering_test.rs  epoch_test.rs  gpu_scoring.rs  mod.rs
crates/basilica-validator/src/journal/: verification_logger.rs
crates/basilica-validator/src/metrics/: api_metrics.rs  business_metrics.rs  mod.rs  prometheus_metrics.rs
crates/basilica-validator/src/miner_prover/: discovery.rs  miner_client.rs  mod.rs  scheduler.rs  test_discovery.rs  tests.rs  types.rs  verification.rs  verification_engine_builder.rs
crates/basilica-validator/src/persistence/: cleanup_task.rs  collateral_persistence.rs  gpu_profile_repository.rs  mod.rs  simple_persistence.rs  validator_persistence.rs
crates/basilica-validator/src/persistence/services/: statistics_service.rs  verification_service.rs
crates/basilica-validator/src/rental/: container_client.rs  deployment.rs  mod.rs  monitoring.rs  types.rs
crates/basilica-validator/src/ssh/: automation_components.rs  dynamic_discovery_controller.rs  key_manager_builder.rs  mod.rs  tests.rs
crates/basilica-validator/src/validation/: challenge_converter.rs  challenge_generator.rs  gpu_profile_query.rs  secure_validator.rs  types.rs
crates/bittensor/: Cargo.toml
crates/bittensor/src/: registration.rs  service.rs  utils.rs
crates/collateral-contract/: Cargo.toml  README.md  foundry.toml
crates/collateral-contract/script/: DeployUpgradeable.s.sol
crates/collateral-contract/src/: Collateral.json  Collateral.sol  CollateralUpgradableABI.json  CollateralUpgradeable.sol  CollateralUpgradeableV2.sol  ERC1967ProxyABI.json  config.rs  lib.rs  proxy.rs  tests.rs
crates/collateral-contract/test/: CollateralTestnet.t.sol  CollateralUpgradeable.t.sol
crates/integration-tests/: Cargo.toml
docker/configs/: miner.toml
docs/: README.md  architecture.md  executor.md  miner.md  quickstart.md  scoring-and-weights.md  validator.md
scripts/: README.md  deploy.sh  monitoring.py  quick-start.sh
scripts/api/: Dockerfile  README.md  build.sh  compose.dev.yml  push.sh
scripts/cli/: Dockerfile  build.sh
scripts/executor/: Dockerfile  build.sh  compose.prod.yml  deploy.sh  push.sh
scripts/localnet/: README.md  compose.yml  restart.sh  setup-wallets.sh  setup.sh  test-report.md
scripts/localtest/: README.md  docker-compose-simplified.yml  docker-compose.yml
scripts/miner/: .env.example  Dockerfile  build.sh  compose.prod.yml  deploy.sh  push.sh
scripts/validator/: Dockerfile  backup_db.sh  build.sh  compose.dev.yml  compose.prod.yml  deploy.sh  investigate.sh  push.sh
telemetry/: README.md  alertmanager.yml  compose.prod.yml  deploy.sh  loki.yml  prometheus.yml
telemetry/ansible/: .gitignore  README.md  ansible.cfg  inventory.example  playbook.yml
telemetry/grafana/: grafana.ini
telemetry/rules/: basilica_alerts.yml
(+119 files in other folders)
