[package]
name = "basilica-validator"
version = "0.1.0"
edition = "2021"
description = "Basilca Validator - Bittensor neuron for verification and scoring"
rust-version = "1.70"

[lib]
name = "basilica_validator"
path = "src/lib.rs"

[[bin]]
name = "basilica-validator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
alloy-primitives = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
figment = { workspace = true }
sqlx = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["limit"] }

# Additional dependencies for validator
futures = "0.3"
futures-util = { version = "0.3", optional = true }
bytes = "1.5"
async-trait = "0.1"
toml = "0.8"
url = "2.5"
prost-types = { workspace = true }
async-stream = "0.3"
eventsource-stream = "0.2"
regex = "1.10"

# Internal dependencies
basilica-common = { path = "../basilica-common" }
basilica-protocol = { path = "../basilica-protocol" }
bittensor = { path = "../bittensor" }
collateral-contract = { path = "../collateral-contract" }

# Validator-specific dependencies
# Bittensor integration (placeholder - adjust when available)
# bittensor-rs = "0.1"

# HTTP client for external communications
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# Temporary file handling
tempfile = "3.8"

# Challenge implementation dependencies
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
hex = "0.4"
fastrand = "2.0"
base64 = "0.21"

# P256 ECDSA signature verification for attestation
p256 = { version = "0.13", features = ["ecdsa"] }
signature = "2.2"

# System information and process management
sysinfo = "0.30"

# SSH key management
ssh-key = { version = "0.6", features = ["ed25519", "std"] }

# OpenAPI documentation support (optional)
utoipa = { version = "4.1", features = ["chrono", "uuid"], optional = true }

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
mockall = "0.11"

[features]
default = []
# Enable HTTP client for external services
client = ["futures-util"]
# Enable test utilities
test-utils = []
# Enable development mode with additional debugging
dev-mode = ["tracing-subscriber/env-filter"]
# Enable OpenAPI schema generation support
openapi = ["utoipa"]
# Enable CLI support with clap derives
cli = []
