[package]
name = "bittensor"
version = "0.1.0"
edition = "2021"
description = "Centralized Bittensor chain interactions via crabtensor"
rust-version = "1.70"

[features]
default = []
generate-metadata = ["subxt-codegen", "subxt-metadata", "subxt-utils-fetchmetadata", "parity-scale-codec"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# Bittensor integration
crabtensor = { workspace = true }

# Additional dependencies for subxt and crypto
subxt = { workspace = true }
hex = "0.4"
sp-core = "34.0.0"
rand = "0.8"
chrono = "0.4"
home = "0.5"
serde_json = "1.0"

# Internal dependencies
basilica-common = { path = "../basilica-common" }

# Metadata generation dependencies (only used by binary)
subxt-codegen = { workspace = true, optional = true }
subxt-metadata = { workspace = true, optional = true }
subxt-utils-fetchmetadata = { workspace = true, features = ["url"] , optional = true}
parity-scale-codec = { version = "3.6", optional = true }

[build-dependencies]
tokio = { workspace = true }
parity-scale-codec = "3.6"

[[bin]]
name = "generate-metadata"
path = "src/bin/generate-metadata.rs"
required-features = ["generate-metadata"]

[dev-dependencies]
tokio-test = "0.4" 